[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Traps/Fan/on.png" type="Texture" id=1]
[ext_resource path="res://assets/Traps/Fan/off.png" type="Texture" id=2]
[ext_resource path="res://src/Traps/Fan/Fan.gd" type="Script" id=3]
[ext_resource path="res://assets/Other/dust_particle.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "off",
"speed": 20.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "on",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 100 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 0.752941, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 8, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
scale_random = 0.3
color_ramp = SubResource( 9 )

[node name="Fan" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "off"
playing = true

[node name="AoE" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AoE"]
position = Vector2( 0, -96 )
shape = SubResource( 7 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -1
amount = 32
lifetime = 1.8
visibility_rect = Rect2( -50, 0, 100, -200 )
process_material = SubResource( 10 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="AoE" to="." method="_on_AoE_body_entered"]
[connection signal="body_exited" from="AoE" to="." method="_on_AoE_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
